# ParallelColumnAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
src/: CSVReader.cpp  CSVReader.h  ColumnAnalyzer.cpp  ColumnAnalyzer.h  DataGenerator.cpp  DataGenerator.h  ParallelProcessor.cpp  ParallelProcessor.h  ResultAggregator.cpp  ResultAggregator.h
tests/: CMakeLists.txt
tests/e2e/: test_end_to_end.cpp
tests/unit/: test_column_analyzer.cpp  test_parallel_processor.cpp
